<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyWeather</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">48HOURS</string>
    <string name="title_section2">CURRENTLY</string>
    <string name="title_section3">10DAYS</string>

    <string name="action_about">About</string>
    <string name="action_iconSets">Icon Sets</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_sendfeedback">Send Feedback</string>
    <string name="action_place">位置</string>
    
    <color name="blue">#0099CC</color>
    <color name="white">#FFFFFF</color>
    <color name="gray">#666</color>
    <color name="r">#66ff0000</color>
    <color name="g">#6600ff00</color>
    <color name="b">#660000ff</color>
    <color name="y">#66ffff00</color>
    
    <string-array name="unit">
        <item>摄氏度</item>
        <item>华氏度</item>
    </string-array>
    <string-array name="unit_value">
        <item>C</item>
        <item>F</item>
    </string-array>
    
    <string-array name="temp_unit">
        <item>Celsius</item>
        <item>Fahrenheit</item>
    </string-array>
    <string-array name="temp_unit_value">
        <item>C</item>
        <item>F</item>
    </string-array>
    
    <string-array name="wind">
        <item>km/h</item>
        <item>mph</item>
        <item>m/s</item>
        <item>knots</item>
    </string-array>
    <string-array name="wind_value">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    
    <string-array name="rainfall">
        <item>cm</item>
        <item>mm</item>
        <item>inches</item>
    </string-array>
    <string-array name="rainfall_value">
        <item>a</item>
        <item>b</item>
        <item>c</item>
    </string-array>
    
    <string-array name="time">
        <item>30 minutes</item>
        <item>1 hours</item>
        <item>2 hours</item>
        <item>3 hours</item>
        <item>4 hours</item>
        <item>6 hours</item>
        <item>12 hours</item>
        <item>18 hours</item>
        <item>24 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="time_value">
        <item>30m</item>
        <item>1h</item>
        <item>2h</item>
        <item>3h</item>
        <item>4h</item>
        <item>6h</item>
        <item>12h</item>
        <item>18h</item>
        <item>24h</item>
        <item>never</item>
    </string-array>
    
</resources>
